<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_sumar"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_sumar" />
        <item
            android:id="@+id/restarFragment"
            android:icon="@drawable/restar"
            android:title="@string/menu_restar" />
        <item
            android:id="@+id/multiplicarFragment"
            android:icon="@drawable/multiplicar"
            android:title="@string/menu_multiplicar" />
        <item
            android:id="@+id/dividirFragment"
            android:icon="@drawable/dividir"
            android:title="@string/menu_dividir" />
    </group>
</menu>